--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
     "name": "ncut/auto",
     "description": "autoload classes",
-    "autoload": {
-        "psr-4": {
-            "Ncut\\Auto\\": "src/"
-        }
-    },
     "authors": [
-        {
-            "name": "葉佳豪",
-            "email": "3B132096@gm.student.ncut.edu.tw"
-        }
+      {
+        "name": "葉佳豪",
+        "email": "3B132096@gm.student.ncut.edu.tw"
+      }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4":{
+              "Demo\\":"./src/Demo"
+        }
+    }
 }
