--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "email": "3B132096@gm.student.ncut.edu.tw"
       }
     ],
-    "require": {},
+    "require": {
+        "monolog/monolog": "^3.7"
+    },
     "autoload": {
         "psr-4":{
               "Demo\\":"./src/Demo"
